[package]
name = "polyexen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crypto-bigint = "0.4.8"
num-bigint = { version = "0.4", features = [ "rand" ] }
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
nom = "7"
pest = "2"
pest_derive = "2"
lazy_static = "1.4"
