[package]
name = "polyexen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crypto-bigint = "0.4.8"
num-bigint = { version = "0.4", features = [ "rand" ] }
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
nom = "7"
pest = "2.4"
pest_derive = "2.4"
lazy_static = "1.4"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
log = "0.4.14"

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { path = "../halo2/halo2_proofs" }
